# rust-ext2-fs

./: .gitignore  .shell_history  Cargo.toml  README.md  test_backspace_fix.md  test_tab_completion.md
img/: dir_entry.b64  disk_struct.b64  ext2.b64  i_block.b64  i_block_addr.b64
src/: lib.rs  main.rs  utils.rs
src/fs/: constant.rs  mod.rs
src/fs/core/: file.rs  fs.rs  inode.rs  iter.rs  mod.rs  traits.rs  utils.rs
src/fs/func/: chdir.rs  chmod.rs  chown.rs  close.rs  create.rs  format.rs  init.rs  link.rs  login.rs  mod.rs  open.rs  passwd.rs  path.rs  pwd.rs  read.rs  rm.rs  rmdir.rs  seek.rs  symlink.rs  useradd.rs  userdel.rs  write.rs
src/gui/: mod.rs
src/gui/static/: index.html
src/gui/static/css/: style.css
src/gui/static/js/: app.js
src/shell/: completion.rs  history.rs  input.rs  mod.rs
src/shell/cmd/: cat.rs  cd.rs  chmod.rs  chown.rs  clear.rs  cp.rs  df.rs  exit.rs  format.rs  grep.rs  help.rs  history.rs  ln.rs  login.rs  ls.rs  mkdir.rs  mod.rs  mv.rs  passwd.rs  pwd.rs  rm.rs  rmdir.rs  touch.rs  unzip.rs  useradd.rs  userdel.rs  users.rs  whoami.rs  write.rs  zip.rs
